--- a/index.html
+++ b/index.html
@@ -5,21 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubi Singh Panwar</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body id="home">
     <div id="body-1">
         <nav>
-            <a id="nav-main" href="#main">About</a>
-            <a id="nav-projects" href="#projects">Projects</a>
-            <a id="nav-contact" href="#contact">Contact Me</a>
-            <a id="nav-badge" href="#badge">CPACC-certified</a>
+            <ul class="nav-list">
+                <li>
+                    <i class="fa fa-home"></i>
+                    <a id="nav-home" class="orange" href="#home">Home</a>
+                </li>
+                <li>
+                    <i class="fas fa-address-card"></i>
+                    <a id="nav-main" class="orange" href="#main">About</a>
+                </li>
+                <li>
+                    <i class="far fa-folder"></i>
+                    <a id="nav-projects" class="orange" href="#projects">Projects</a>
+                </li>
+                <li>
+                    <i class="fas fa-phone"></i>
+                    <a id="nav-contact" class="orange" href="#contact">Contact Me</a>
+                </li>
+                <li>
+                    <i class="fa fa-certificate"></i>
+                    <a id="nav-badge" class="orange" href="#badge">CPACC-certified</a>
+                </li>
+            </ul>
         </nav>
     </div>
-    <div id="body-2">
+    <div id="body-2"></div>
+    <div id="body-3">
         <header>
             <h1>I'm <span class="orange">Rubi</span></h1>
             <h2>Web Accessibility Specialist</h2>
-            <a href="file:///C:/Users/SSP/Downloads/Telegram%20Desktop/Rubi-Singh-Panwar-CPACC-Resume.pdf" download type="">Download Resume</a>
         </header>
         <main id="main">
             <section>
@@ -47,6 +69,7 @@
                     <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
+                <a href="file:///C:/Users/SSP/Downloads/Telegram%20Desktop/Rubi-Singh-Panwar-CPACC-Resume.pdf" download>Download Resume</a>
             </section>
             <section id="Projects"></section>
             <section id="contact">
@@ -67,14 +90,14 @@
                     <input type="submit" id="submit" name="submit"><br/>
                     <label></label>
                 </form>
-            </section>
-        </div>    
-    </main>
-    <footer>
-        <a href="https://www.linkedin.com/in/rubisinghpanwar/">LinkedIn</a>
-        <a href="https://www.twitter.com/rubisinghpanwar/">Twitter</a>
-        <div id="badge" data-iframe-width="150" data-iframe-height="270" data-share-badge-id="852897d6-8809-4b77-8a5f-301677a7cd78" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
-        <a
-    </footer>
+            </section>    
+        </main>
+        <footer>
+            <a href="https://www.linkedin.com/in/rubisinghpanwar/">LinkedIn</a>
+            <a href="https://www.twitter.com/rubisinghpanwar/">Twitter</a>
+            <div id="badge" data-iframe-width="150" data-iframe-height="270" data-share-badge-id="852897d6-8809-4b77-8a5f-301677a7cd78" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+        </footer>
+    </div>
+    <div id="body-4"></div>
 </body>
 </html>
